--- a/.github/workflow/main.yml
+++ b/.github/workflow/main.yml
@@ -6,7 +6,7 @@ on:
       - main
 
 env:
-  AZURE_WEBAPP_NAME: demoadd34
+  AZURE_WEBAPP_NAME: newwebapp021
   AZURE_WEBAPP_PATH: '.'
   DOTNET_VERSION: '7.0.100'
 
